tests/samples/negative/types/slice_alias_return_local.ax
module slice_alias_return_local;

fn bad() -> []u8 {
    let bytes: [2]u8 = b"ok";
    let view: []u8 = bytes[:];
    return view;
}

fn main() -> i32 {
    return 0;
}
